Ex4_NodeWebsite/k8s/node/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: node-app
  namespace: devops

spec:
  replicas: 3

  selector:
    matchLabels:
      app: node-app

  template:

    metadata:
      labels:
        app: node-app

    spec:

      containers:

        - name: node-app

          image: gip37/node-website:latest

          imagePullPolicy: Always

          ports:

            - containerPort: 3000
