Ex4_NodeWebsite/k8s/node/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: node-service
  namespace: devops

spec:
  selector:
    app: node-app

  ports:
    - port: 3000
      targetPort: 3000

  type: NodePort
