Ex4_NodeWebsite/k8s/node/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: node-app-ingress
  namespace: devops

spec:
  ingressClassName: traefik

  rules:
    - host: ipg-devops.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-service
                port:
                  number: 3000

    - host: www.ipg-devops.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-service
                port:
                  number: 3000
